--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a class="text" href="tekst.html"><i style="font-size: 30px;" class="demo-icon icon-doc-text"></i></a> 
         <a class="album" href="album.html"><i style="font-size: 30px;" class="demo-icon icon-info"></i></a>
         <a class="yt" href="https://www.youtube.com/channel/UCjQBWIy5afGfPDgiIPWPIRQ"><i style="font-size: 30px;" class="demo-icon icon-youtube-play"></i></a><br><br>
-        <a href="https://drive.google.com/file/d/1sT0BTTp4mOijUfx0JC0lNmhe1-sgGb37/view?usp=sharing" download><button class="btn"><i class="fa fa-download"></i> Pobierz MP3</button></a><br><br>
+        <a href="https://drive.google.com/uc?id=1sT0BTTp4mOijUfx0JC0lNmhe1-sgGb37&export=download" download><button class="btn"><i class="fa fa-download"></i> Pobierz MP3</button></a><br><br>
     </div>    
 </body>
 </html>
